<resources>
    <string name="app_name">Fall2What</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="wifi_label">Wi - Fi </string>
    <string name="bluetooth_label">Bluetooth</string>
    <string name="mode_1_label">Mode 1</string>
    <string name="mode_2_label">Mode 2</string>
    <string name="search_Label">Search</string>
    <string name="start_Label">Start</string>
    <string name="play_label">Play</string>
    <string name="shop_label">Shop</string>
    <string name="fx_label">Sound Effect</string>
    <string name="sound_label">Music</string>
    <string name="reset_app_label">Reset</string>
    <string name="ip_text_label">IP</string>

    <string name="skill_1_label">Skill 1</string>
    <string name="skill_2_label">Skill 2</string>
    <string name="choose_confirmPg">Confirm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_choose_pg">ChoosePgActivity</string>
</resources>
