<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.detlef.fall2what.ConnectionActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_Label"
        android:id="@+id/startButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_label"
        android:id="@+id/wifiButton"
        android:layout_alignTop="@+id/mode1"
        android:layout_alignRight="@+id/blueButton"
        android:layout_alignEnd="@+id/blueButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_label"
        android:id="@+id/blueButton"
        android:layout_below="@+id/wifiButton"
        android:layout_toLeftOf="@+id/startButton"
        android:layout_toStartOf="@+id/startButton"
        android:layout_marginTop="102dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_1_label"
        android:id="@+id/mode1"
        android:layout_marginTop="99dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/mode2"
        android:layout_alignStart="@+id/mode2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_2_label"
        android:id="@+id/mode2"
        android:layout_alignTop="@+id/blueButton"
        android:layout_toRightOf="@+id/startButton"
        android:layout_toEndOf="@+id/startButton" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/bar"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/bar2"
        android:layout_alignTop="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_above="@+id/startButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible"/>

</RelativeLayout>
